--- a/example/index.html
+++ b/example/index.html
@@ -20,7 +20,7 @@
 
     const map = new mapboxgl.Map({
         container: "map",
-        zoom: 2,
+        zoom: 0,
         center: [30, 30]
     });
 
@@ -53,9 +53,9 @@
         "paint": {
             "fill-color": {
                 property: "doc_count",
-                stops: [[0, "#ff0000"], [3, "#0000ff"]]
+                stops: [[1, "#e0ecf4"],[2, "#9ebcda"],[5, "#8856a7"]]
             },
-            "fill-opacity": 0.2
+            "fill-opacity": 0.3
         }
     });
     map.addLayer({
@@ -66,7 +66,7 @@
         "paint": {
             "circle-color": "#000000",
             "circle-radius": 2,
-            "circle-opacity": 0.3
+            "circle-opacity": 0.5
         }
     });
 
